--- a/resizable.html
+++ b/resizable.html
@@ -51,7 +51,7 @@
     <script src="resizable.js"></script>
     <script>
 
-        resizable(document.querySelector('#element'));
+        resizable(document.querySelector('#element'), {active:true});
         resizable(document.querySelector('#text'), {color:"red"});
         resizable(document.querySelector('#table'));
 
