--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Examples</h1>
 
-    <p>Click enable resize:</p>
+    <p>Click elemnt to enable resize:</p>
 
     <h2>Image</h2>
 
