--- a/examples/index.html
+++ b/examples/index.html
@@ -47,13 +47,13 @@
     
 
     
-    <script src="../dist/resizable.min.js"></script>
+    <script src="../dist/set-resizable.min.js"></script>
     <script>
 
-        resizable(document.querySelector('#image1'), {active:true});
-        resizable(document.querySelector('#image2'));
-        resizable(document.querySelector('#text'), {color:"red"});
-        resizable(document.querySelector('#table'));
+        setResizable(document.querySelector('#image1'), {active:true});
+        setResizable(document.querySelector('#image2'));
+        setResizable(document.querySelector('#text'), {color:"red"});
+        setResizable(document.querySelector('#table'));
 
     </script>
 </body>
