--- a/examples/index.html
+++ b/examples/index.html
@@ -50,11 +50,20 @@
     <script src="../dist/set-resizable.min.js"></script>
     <script>
 
-        setResizable(document.querySelector('#image1'), {active:true});
-        setResizable(document.querySelector('#image2'));
-        setResizable(document.querySelector('#text'), {color:"red"});
-        setResizable(document.querySelector('#table'));
-        
+        new setResizable(document.querySelector('#image1'), {active:true});
+        new setResizable(document.querySelector('#table'));
+        new setResizable(document.querySelector('#text'));
+
+       var resibable  = new setResizable(document.querySelector('#image2'));
+
+        resibable.activate();
+        resibable.resize(200,200);
+
+        resibable.onresize = function(data) {
+            console.log("onresize", data);
+        }
+            
+
     </script>
 </body>
 
